@@ -1,3 +1,4 @@
+9/23/10 create current indicator node, place on canvas, not wired up
 9/23/10 increase value font size for bar meters
 9/23/10 allow separate fonts for label and value on capacitor drag handles
 9/23/10 use bold font for bar meter titles
